# predi_edi

./: .gitignore  MANIFEST.in  Makefile  README.md  edixample.json  pyproject.toml  setup.py  temp.json  temp.toml  temp2.json
.repo/: tests
predi/: core.py
predi/tests/: test_parser.py
predi/tests/samples/x12/: sample_850.edi
src/predi/: __main__.py  api.py  cli.py  core.py  edi.py  partner.py  transactions.py  utils.py
src/predi/tests/: __init__.py  generate_fixtures.py  test_fixtures.py  test_mapping.py  test_parser.py
src/predi/tests/fixtures/json/toml/850/: targetds.toml  wm.toml
src/predi/tests/fixtures/json/x12/850/: targetds.edi
src/predi/tests/fixtures/json/yaml/850/: amz.yaml  targetds.yaml  wm.yaml
src/predi/tests/fixtures/x12/json/850/: amz_ex.json  targetds.json  wm.json
src/predi/tests/fixtures/x12/toml/850/: amz_ex.toml  targetds.toml
src/predi/tests/fixtures/x12/yaml/850/: amz_ex.yaml  targetds.yaml
src/predi/tests/fixtures/yaml/json/850/: amz.json  targetds.json  wm.json
src/predi/tests/fixtures/yaml/toml/850/: amz.toml  targetds.toml
src/predi/tests/fixtures/yaml/x12/850/: amz.edi  targetds.edi  wm.edi
src/predi/tests/samples/json/850/: amz.json  targetds.json  wm.json
src/predi/tests/samples/maps/amz_850/: amz_850.py  amz_850_map.json
src/predi/tests/samples/x12/850/: amz.edi  amz_ex.edi  sample_wm_850.edi  targetds.edi
src/predi/tests/samples/yaml/850/: targetds.yaml
src/predi/transactions/: README.md  __init__.py  specs.py
src/predi/transactions/mapping/: __init__.py  amz_850.py  x12.py
src/predi/transactions/maps/: __init__.py  amz_850.py  x12.py
src/predi/transactions/models/: __init__.py  base_purchase_order.toml  custom_purchase_order.toml
src/predi/transactions/specs/: __init__.py  amz_850.py  amz_850.toml  x12.py
temp/: amz850.csv.predi  amz850L8266355.csv  temp.json  temp2.json  temp2.toml  temp_toml.json
(+5 files in other folders)
